# unified-sql-lsp

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  DESIGN.md.backup  FEATURE_LIST.yaml  GRAMMAR_LIMITATIONS.md  LICENSE-APACHE  Makefile  PLAYGROUND_HANDOFF.md  README.md  TESTING.md  TODO.json  VERIFICATION.md  flake.nix  go.mod  go.sum  shell.nix
benches/profiling/: .gitignore  Cargo.toml  README.md
benches/profiling/benches/: fixtures.rs  lsp_operations.rs  operations.rs  workload.rs
benches/profiling/src/: lib.rs  operations.rs  workload.rs
benches/profiling/src/fixtures/queries/: complex_join.sql  nested_subquery.sql  simple_select.sql
crates/catalog/: Cargo.toml
crates/catalog/src/: error.rs  lib.rs  live_mysql.rs  live_postgres.rs  metadata.rs  static.rs  trait.rs
crates/catalog/tests/: integration_test.rs
crates/context/: Cargo.toml
crates/context/src/: completion.rs  cst_utils.rs  definition.rs  keywords.rs  lib.rs  scope_builder.rs  symbols.rs
crates/context/tests/: test_cte_detection.rs
crates/function-registry/: Cargo.toml
crates/function-registry/src/: hover.rs  lib.rs  registry.rs
crates/function-registry/src/builtin/: mod.rs  mysql.rs  postgresql.rs
crates/grammar/: .gitignore  Cargo.toml  README.md  build.rs  build.sh  package.json
crates/grammar/src/: lib.rs
crates/grammar/src/grammar/: grammar.js
crates/grammar/src/grammar/dialect/: base.js  mysql-5.7.js  mysql-8.0.js  mysql.js  postgresql-12.js  postgresql-14.js  postgresql.js
crates/grammar/test/corpus/: base.txt
crates/grammar/tests/: api_tests.rs  debug_parse.rs
crates/ir/: Cargo.toml
crates/ir/src/: dialect.rs  expr.rs  lib.rs  metadata.rs  query.rs
crates/ir/tests/: expr_tests.rs  query_tests.rs
crates/lowering/: Cargo.toml
crates/lowering/src/: context.rs  cst.rs  error.rs  lib.rs
crates/lowering/src/dialect/: base.rs  mod.rs  mysql.rs  postgresql.rs  shared.rs
crates/lowering/tests/: lowering_tests.rs  mysql_tests.rs  postgresql_tests.rs
crates/lsp/: Cargo.toml
crates/lsp/benches/: catalog.rs  completion_pipeline.rs  concurrency.rs  memory.rs  mod.rs  parsing.rs  semantic.rs
crates/lsp/benches/fixtures/complex/: mysql_01_cte.sql  mysql_02_window_function.sql  mysql_03_nested_subqueries.sql  postgresql_01_cte.sql  postgresql_02_window_function.sql  postgresql_03_nested_subqueries.sql
crates/lsp/benches/fixtures/medium/: mysql_01_joins.sql  mysql_02_aggregates.sql  mysql_03_subquery_where.sql  postgresql_01_joins.sql  postgresql_02_aggregates.sql  postgresql_03_subquery_where.sql
crates/lsp/benches/fixtures/simple/: mysql_01_single_table.sql  mysql_02_basic_where.sql  (+4 more)
crates/lsp/src/: backend.rs  catalog_manager.rs  config.rs  core.rs  cst_utils.rs  definition.rs  diagnostic.rs  document.rs  hover.rs  lib.rs  parsing.rs  request_context.rs  symbols.rs  sync.rs  tcp.rs  tcp_old.rs
crates/lsp/src/completion/: alias_resolution.rs  catalog_integration.rs  context.rs  error.rs  keywords.rs  mod.rs  render.rs  scopes.rs
crates/lsp/src/profiling/: mod.rs  stats.rs  timer.rs
crates/lsp/src/wasm/: exports.rs  mod.rs
crates/lsp/tests/: completion_tests.rs  diagnostic_tests.rs  dialect_matrix_tests.rs  document_sync_tests.rs  e2e_completion_tests.rs  error_handling_tests.rs  integration_tests.rs  parser_manager_tests.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: alias_resolution.rs  analyzer.rs  completion.rs  error.rs  hover.rs  lib.rs  resolution.rs  scope.rs  symbol.rs  syntax_diagnostics.rs  validator.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: assertions.rs  fixtures.rs  lib.rs  mock_catalog.rs  mock_cst.rs  test_case_parser.rs  test_case_validator.rs
crates/test-utils/tests/: e2e_validation.rs  test_case_parser_integration.rs
lsp-wasm/: Cargo.toml
lsp-wasm/src/: lib.rs
tests/e2e/: Cargo.toml  docker-compose.yml
tests/e2e-rs/: Cargo.toml  MIGRATION_NOTES.md  PERFORMANCE_RESULTS.md  REFACTOR_SUMMARY.md  TASK_1.1_IMPLEMENTATION_NOTES.md  TASK_1.2_COMPILATION_VERIFICATION.md  WORKTREE_DEVELOPMENT_SETUP.md  docker-compose.yml  list-e2e-tests.sh  nextest.toml  test_exports.rs
tests/e2e-rs/core/: Cargo.toml
tests/e2e-rs/core-macros/: Cargo.toml  build.rs
tests/e2e-rs/core-macros/src/: lib.rs
tests/e2e-rs/core/src/: assertions.rs  client.rs  db_pool.rs  docker.rs  engine_manager.rs  execution.rs  lib.rs  lifecycle.rs  logging.rs  lsp_pool.rs  orchestrator.rs  runner.rs  utils.rs  yaml_parser.rs
tests/e2e-rs/fixtures/: README.md
tests/e2e-rs/mysql-5.7/: Cargo.toml
tests/e2e-rs/mysql-5.7/tests/: integration_test.rs
tests/e2e-rs/mysql-8.0/: Cargo.toml
tests/e2e-rs/mysql-8.0/tests/: integration_test.rs
tests/e2e-rs/postgresql-12/: Cargo.toml
tests/e2e-rs/postgresql-12/tests/: integration_test.rs
tests/e2e-rs/postgresql-16/: Cargo.toml
tests/e2e-rs/postgresql-16/tests/: integration_test.rs
tests/e2e-rs/src/: assertions.rs  client.rs  docker.rs  engine_manager.rs  lib.rs  runner.rs  text_case_runner.rs  yaml_parser.rs
tests/e2e-rs/src/db/: adapter.rs  mod.rs
tests/e2e-rs/tests/: completion.rs  diagnostics.rs  hover.rs  mysql_5_7_completion.rs  mysql_5_7_hover.rs  mysql_8_0_completion.rs  postgresql_12_completion.rs  postgresql_16_completion.rs  test_discovery.rs
tests/e2e-rs/tests/completion/: from_advanced.yaml  from_clause.yaml  functions.yaml  join_advanced.yaml  join_completion.yaml  keywords.yaml  select_advanced.yaml  select_clause.yaml  where_clause.yaml
tests/e2e-rs/tests/diagnostics/: basic_diagnostics.yaml
tests/e2e-rs/tests/hover/: basic_hover.yaml
tests/e2e-rs/tests/mysql-8.0/: README.md
tests/e2e-rs/tests/postgresql-12/: README.md
tests/e2e-rs/tests/postgresql-16/: README.md
tests/e2e/config/: mysql-5.7.toml
tests/e2e/fixtures/: SUMMARY.md  generate_metadata.sh
tests/e2e/fixtures/cases/: 01_basic_select.txt  02_from_clause.txt  03_join.txt  04_where_clause.txt  05_functions.txt  06_advanced.txt  07_edge_cases.txt
tests/e2e/scripts/: healthcheck.sh  setup.sh  teardown.sh
tests/e2e/src/: lib.rs  parser_validation.rs
(+178 files in other folders)
