[workspace]
members = ["crates/*"]
exclude = ["benches"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Vibe Kanban Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vibe-kanban/unified-sql-lsp"

[workspace.dependencies]
# LSP types
lsp-types = "0.95"

# Serde for serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

tree-sitter = "0.26"

# Random number generation (with WASM support)
getrandom = { version = "0.2", features = ["js"] }
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async support
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

# Dev dependencies for testing
tokio-test = "0.4"
criterion = "0.5"

[workspace.metadata.cargo-all-features]
skip_optional_dependencies = true
