[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["woxQAQ"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/woxQAQ/unified-sql-lsp"

[workspace.dependencies]
# LSP types
lsp-types = "0.95"

# Serde for serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

tree-sitter = "0.26"
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async support
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

# Dev dependencies for testing
tokio-test = "0.4"
criterion = "0.5"
