[package]
name = "unified-sql-lsp-wasm"
version = "0.1.0"
edition = "2021"
authors = ["woxQAQ"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/woxQAQ/unified-sql-lsp"
description = "WebAssembly bindings for Unified SQL LSP playground"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"

[features]
default = []
