[package]
name = "unified-sql-lsp-catalog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Database schema abstraction for Unified SQL LSP"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
