[package]
name = "unified-sql-lsp-catalog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Database schema abstraction for Unified SQL LSP"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# Database drivers (feature-gated)
sqlx = { version = "0.8", optional = true, features = ["runtime-tokio"] }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[features]
default = []
# Dialect features - enabling these also enables live database connections
mysql = ["sqlx/mysql"]
postgresql = ["sqlx/postgres"]
# Alias for enabling both dialects
all-dialects = ["mysql", "postgresql"]
