[package]
name = "unified-sql-grammar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-dialect SQL grammar for tree-sitter supporting MySQL, PostgreSQL, and more"

[build-dependencies]
cc = "1.0"

[dependencies]
tree-sitter = "0.20"
unified-sql-lsp-ir = { path = "../ir" }

# The grammar files are at src/grammar/
# Build script will compile them using tree-sitter-cli

[dev-dependencies]
tree-sitter = "0.20"
