[package]
name = "unified-sql-lsp-ir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Intermediate Representation for Unified SQL LSP"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
