[package]
name = "unified-sql-lsp-lowering"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CST to IR lowering for Unified SQL LSP"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
thiserror = { workspace = true }
unified-sql-lsp-ir = { path = "../ir" }

# Tree-sitter (optional - for future integration)
tree-sitter = { version = "0.22", optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
# Feature flags for dialect support
mysql = []
postgresql = []
tidb = ["mysql"]
mariadb = ["mysql"]
cockroachdb = ["postgresql"]

default = ["mysql", "postgresql"]
