[package]
name = "unified-sql-lsp-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LSP server implementation for Unified SQL LSP"

[[bin]]
name = "unified-sql-lsp"
path = "src/bin/main.rs"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

# LSP framework
tower-lsp = "0.20"

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "io-std", "macros"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Text manipulation
ropey = "1.6"

# Internal crates
unified-sql-lsp-ir = { path = "../ir" }
unified-sql-lsp-catalog = { path = "../catalog", features = [
  "mysql",
  "postgresql",
] }
unified-sql-lsp-function-registry = { path = "../function-registry" }
unified-sql-lsp-semantic = { path = "../semantic" }
unified-sql-lsp-context = { path = "../context" }
unified-sql-lsp-lowering = { path = "../lowering" }
unified-sql-grammar = { path = "../grammar" }

# Tree-sitter parsing
tree-sitter = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
unified-sql-lsp-test-utils = { path = "../test-utils" }
criterion = "0.5"

[features]
default = []
