[package]
name = "unified-sql-lsp-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LSP server implementation for Unified SQL LSP"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "unified-sql-lsp"
path = "src/bin/main.rs"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true, optional = true }

# LSP framework
tower-lsp = { version = "0.20", optional = true }
lsp-types = { version = "0.95", optional = true }

# Async runtime
tokio = { version = "1.35", default-features = false, optional = true, features = ["rt-multi-thread", "io-std", "macros", "net"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Text manipulation (only needed for document management)
ropey = { version = "1.6", optional = true }

# Internal crates (optional for WASM)
unified-sql-lsp-ir = { path = "../ir", optional = true }
unified-sql-lsp-catalog = { path = "../catalog", optional = true }
unified-sql-lsp-function-registry = { path = "../function-registry", optional = true }
unified-sql-lsp-semantic = { path = "../semantic", optional = true }
unified-sql-lsp-context = { path = "../context", optional = true }
unified-sql-lsp-lowering = { path = "../lowering", optional = true }
unified-sql-grammar = { path = "../grammar", optional = true }

# Tree-sitter parsing (not available in WASM)
tree-sitter = { workspace = true, optional = true }

# WASM support
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Profiling (optional, feature-gated)
flamegraph = { version = "0.6", optional = true }
dhat = { version = "0.3", optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dev-dependencies]
tokio-test = "0.4"
unified-sql-lsp-test-utils = { path = "../test-utils" }
criterion = "0.5"

# Benchmark harnesses
[[bench]]
name = "completion_pipeline"
harness = false

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "semantic"
harness = false

[[bench]]
name = "catalog"
harness = false

[[bench]]
name = "concurrency"
harness = false

[[bench]]
name = "memory"
harness = false

[features]
default = ["lsp", "catalog", "parser"]
lsp = ["tower-lsp", "lsp-types", "async-trait", "tokio", "ropey"]
catalog = [
  "unified-sql-lsp-catalog",
  "unified-sql-lsp-catalog/mysql",
  "unified-sql-lsp-catalog/postgresql"
]
parser = [
  "unified-sql-lsp-ir",
  "unified-sql-lsp-function-registry",
  "unified-sql-lsp-semantic",
  "unified-sql-lsp-context",
  "unified-sql-lsp-lowering",
  "unified-sql-grammar",
  "tree-sitter",
]
wasm = []
profiling = []
flamegraph = ["dep:flamegraph", "profiling"]
dhat = ["dep:dhat", "profiling"]
