[package]
name = "unified-sql-lsp-semantic"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
unified-sql-lsp-catalog = { path = "../catalog" }
unified-sql-lsp-ir = { path = "../ir" }

[dev-dependencies]
serde_json = { workspace = true }
